Changes for 2.2.13rc1

New features:
A.F....... [ZBX-1357] updated French, Spanish, Vietnamese translations; thanks to Zabbix translators (zalex_ua)

Bug fixes:
A......... [ZBX-8924] improved performance of alert.get method (Sasha)
..F....... [ZBX-8635] fixed trigger expression constructor support of value suffixes (Cemeris)
........S. [ZBX-10674] prohibited 'band' operator for counting float values (gleb)
........S. [ZBX-10658] fixed count() evaluation for numeric values with operator and empty pattern (gleb)
........S. [ZBX-10312] changed sum(), str(), regexp(), iregexp() trigger functions to return 0 if there are no data in the requested range (wiper)

--------------------------------------------------------------------------------
Changes for 2.2.12

2.2.12rc1 was released as 2.2.12 without any changes

--------------------------------------------------------------------------------
Changes for 2.2.12rc1

New features:
A.F....... [ZBX-1357] enabled Chinese (China), Greek, Korean, Romanian, Ukrainian, Vietnamese translations to be displayed by default (zalex_ua)
A.F....... [ZBX-1357] updated Chinese (China), Chinese (Taiwan), English (United States), French, Japanese, Korean, Polish, Russian, Ukrainian, Vietnamese translations; thanks to Zabbix translators (zalex_ua)
A......... [ZBX-9859] improved performance of screen.get method for an unprivileged user (Sasha)

Bug fixes:
A......... [ZBX-9162] fixed performance of the hostgroup.get method under MySQL (Gunars, Sasha)
.......PS. [ZBX-10493] fixed memory leak when trying to reconnect to URL (viktors)
..F....... [ZBX-6491] fixed resolving of {ITEM.VALUE} macro in "System status" widget and Monitoring -> Triggers (Gunars)
........S. [ZBX-10510] fixed action condition time period checking (viktors)
A......... [ZBX-10155] prohibited creation of a trigger prototype which belongs to a host and a template simultaneously (Sasha)